add dataloaders for training and testing

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ Icon # Note: The actual filename is "Icon" followed by a carriage return (Icon\r
 .TemporaryItems
 .VolumeIcon.icns
 TheVolumeSettingsFolder
+slakh2100_flac_redux
 
 # Directories potentially created on network shares
 .AppleDB
