--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Icon # Note: The actual filename is "Icon" followed by a carriage return (Icon\r
 .VolumeIcon.icns
 TheVolumeSettingsFolder
 slakh2100_flac_redux
+ai_final
 
 # Directories potentially created on network shares
 .AppleDB
