Update .gitignore and refactor DataProcesser.py for improved readability and structure

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Icon # Note: The actual filename is "Icon" followed by a carriage return (Icon\r
 TheVolumeSettingsFolder
 slakh2100_flac_redux
 ai_final
+ProcessData
 
 # Directories potentially created on network shares
 .AppleDB
