--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Icon # Note: The actual filename is "Icon" followed by a carriage return (Icon\r
 .VolumeIcon.icns
 TheVolumeSettingsFolder
 slakh2100_flac_redux
+slakh2100_flac_redux.tar.gz
 ai_final
 ProcessData
 
