Refactor: Enhance project structure by adding CRNN model implementation, data processing utilities, and training scripts; update .gitignore and include caching for mel spectrograms.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Icon # Note: The actual filename is "Icon" followed by a carriage return (Icon\r
 TheVolumeSettingsFolder
 slakh2100_flac_redux
 slakh2100_flac_redux.tar.gz
+mel_cache
 ai_final
 ProcessData
 __pycache__
